--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/react-native": "^12.4.2",
     "next": "14.0.3",
     "react": "^18.2.0",
-    "react-datepicker": "^4.24.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-horizontal-datepicker": "^2.0.3",
     "react-icons": "^4.12.0",
+    "react-test-renderer": "^18.2.0",
     "react-toastify": "^9.1.3",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
