--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-select": "^5.8.0",
     "react-test-renderer": "^18.2.0",
     "react-toastify": "^9.1.3",
     "swiper": "^11.0.5"
