--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@testing-library/react-native": "^12.4.2",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
